--- a/Curriculum_Learning_Dockstream_Demo.ipynb
+++ b/Curriculum_Learning_Dockstream_Demo.ipynb
@@ -60,7 +60,7 @@
         "##Molecular Docking Prerequisites\n",
         "\n",
         "1. Obtain a license to the [Schrödinger Software Suite](https://www.schrodinger.com/)\n",
-        "2. Have access to a GPU (for these experiments, the computational resources required were 3 GPUs and 30 CPU cores, provided by CSIR’s Centre for High Performance Computing [(CHPC)](https://www.chpc.ac.za/))\n",
+        "2. Have access to a GPU (for these experiments, the computational resources required were 3 GPUs and 30 CPU cores, provided by CSIR’s Centre for High Performance Computing [(CHPC)](https://www.chpc.ac.za/)\n",
         "3. Generate the receptor grid using [Maestro](https://www.schrodinger.com/products/maestro)\n",
         "  - Download a [PDB file](https://github.com/clairefielden/ADD/blob/d269dacc6855e29b3f2793c4c2fc2a7f2b1a090d/chem/4d0l.pdb) containing the interaction between the target receptor and a sample ligand\n",
         "  - Use the Protein Preparation Wizard to create a grid around the target receptor's binding cavity\n",
