--- a/Curriculum_Learning_Dockstream_Demo.ipynb
+++ b/Curriculum_Learning_Dockstream_Demo.ipynb
@@ -85,7 +85,7 @@
         "id": "9nggjekeM_4T"
       },
       "source": [
-        "##Cluser Use\n",
+        "##Cluster Use\n",
         "1. Ensure you are using a GPU in your Runtime Evironment\n",
         "2. Clone the github repo with all the necessary files: <br>\n",
         "```bash\n",
